hphp/hack/test/typecheck/inout/bad_inout_hint_call6.php
<?hh // strict

function foo((function(inout int): void) $f): void {}

function test(): void {
  foo(
    (inout num $v) ==> {
    },
  );
}
